Fix Header + Slider Height On Firefox

--- a/assets/scss/components/_book.scss
+++ b/assets/scss/components/_book.scss
@@ -88,6 +88,7 @@
 .book__img-wrapper {
   width: 100%;
   max-width: 35rem;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2rem;
