--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -21,12 +21,13 @@
   font-family: $Gotham-B;
   text-decoration: none;
   text-transform: uppercase;
+  line-height: 1.2;
 }
 
 .author {
-  margin-top: 1rem;
   color: inherit;
   font-family: $Gotham-B;
   text-transform: uppercase;
+  opacity: .7;
 }
 
